2005-03-19  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* src/PyDO/joins.py (Join.getSome): reimplemented a bit.  Still
	doesn't work with nested joins or self-joins.

2005-03-18  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* src/PyDO/joins.py: starting work on module that does various
	types of joins.  Doesn't work yet.

2005-03-17  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* src/PyDO/utils.py: moved some utility functions to a separate
	module. 

	* src/PyDO/base.py (PyDO.getColumns): change to behavior, and
	method signature (optional parameter is now "qualifier", not
	"qualified").  If qualifier is a string, it will be used as the
	table alias; if it isn't and is true, the full table name will be
	used. 

2005-03-16  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* src/PyDO/base.py (_metapydo.__init__): removed unnecessary
	dict() around generator expression passed to update().
	(PyDO.joinTable): now it is possible to add to the where clause, a
	la getSome(), including order, limit, and offset, and add extra
	tables to the select as well.
	(arrayfetch): put in None rather than a PyDO object when all the
	columns are null for an object.  This method, however, is probably
	going bye-bye, to be replaced by a happy little family of Join
	objects. 

2005-03-15  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* src/PyDO/base.py (_setize): removed spurious variable
	assignments (left in by mistake).

2005-03-15  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO/__init__.py (__version__): cutting first alpha release (2.0a0).
