@@ -1,3 +1,7 @@
+2005-03-19  Jacob Smullyan  <smulloni@bracknell.smullyan.org>
+
+	* src/PyDO/joins.py: curried the Join class with a slew of subclasses. 
+
 2005-03-19  Jacob Smullyan  <smulloni@bunbury.smullyan.org>
 
 	* src/PyDO/joins.py (Join.getSome): reimplemented a bit.  Still
